--- a/Infrastructure.html
+++ b/Infrastructure.html
@@ -47,33 +47,30 @@
 		<div class="gallary">
 			<div>
 				<img src="images\pic1.jpeg">
-				<p>tooolsss</p>
 			</div>
 			<div>
 				<img src="images\pic2.jpg">
-				<p>tooolsss</p>
 			</div>
 			<div>
 				<img src="images\pic3.jpg">
-				<p>tooolsss</p>
 			</div>
-			<div><img src="images\pic9.jpg">
-				<p>tooolsss</p>
+			<div>
+				<img src="images\pic9.jpg">
 			</div>
-			<div><img src="images\pic5.jpg">
-				<p>tooolsss</p>
+			<div>
+				<img src="images\pic5.jpg">
 			</div>
-			<div><img src="images\pic7.jpg">
-				<p>tooolsss</p>
+			<div>
+				<img src="images\pic7.jpg">
 			</div>
-			<div><img src="images\pic4.jpg">
-				<p>tooolsss</p>
+			<div>
+				<img src="images\pic4.jpg">
 			</div>
-			<div><img src="images\pic8.jpg">
-				<p>tooolsss</p>
+			<div>
+				<img src="images\pic8.jpg">
 			</div>
-			<div><img src="images\pic6.jpeg">
-				<p>tooolsss</p>
+			<div>
+				<img src="images\pic6.jpeg">
 			</div>
 		</div>
 	
