--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 						<!--  Home contents   -->
 
-	<div class="container" id="about">
+	<section class="container" id="about">
 		<div class="imgsec" id="left">
 			<img src="images\sharvesh tool room.jpg" id="anim">
 		</div>
@@ -70,7 +70,7 @@
 			<h1 id="h1title">Who We Are?</h1>
 			<p>Sharvesh tool room commenced its journey in the year 2021. We can handle all types of VMC job work. We have build high-quality goods for our customers. Our moral status till date has gained enough confidence for all our clients and customers.</p>
 		</div>
-	</div>
+	</section>
 	<div class="container" id="container">
 		<div class="content" >
 			<h1 id="h1title">What we do?</h1>
@@ -95,9 +95,9 @@
 
 							<!---   Map   --->
 
-	<div class="map" id="contact">
+	<section class="map" id="contact">
 		<iframe src="https://maps.google.com/maps?width=700&amp;height=440&amp;hl=en&amp;q=Sharvesh%20Tool%20Room%20Kappalur%2C%20Unnamed%20Road%2C%20Uchapatti%2C%20Tamil%20Nadu%20625008+(Sharvesh%20tool%20room)&amp;ie=UTF8&amp;t=&amp;z=12&amp;iwloc=B&amp;output=embed"></iframe>
-	</div>
+	</section>
 
 							<!--   footer   -->
 	<div class="footer">
