--- a/services.html
+++ b/services.html
@@ -23,10 +23,10 @@
 			<div class="navbar-items hide">
 				<ul>
 					<li><a href="index.html"> Home</a></li>
-					<li><a href="#about">About us</a></li>
+					<li><a href="index.html#about">About us</a></li>
 					<li><a href="#">Services</a></li>
 					<li><a href="Infrastructure.html">Infrastructure</a></li>
-					<li><a href="#contact">Contact</a></li>
+					<li><a href="index.html#contact">Contact</a></li>
 				</ul>
 			</div>
 		</nav>
